# servier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: workflow.py
servier/: clean.py  process.py  read.py  utilities.py
servier/data/: __init__.py  output.json
sql/: premiere_partie.sql  seconde_partie.sql
tests/: test_servier.py
