[tool.poetry]
name = "servier"
version = "0.1.0"
description = ""
authors = ["Lahloug <ghali-lahlou998@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.6.12"
scipy = "1.5.4"
apache-airflow = "2.0.1"
pandas = "1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
servier-read = "servier.read:read_drugs"
